# odsbox

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SUPPORT.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yml  schedule-update-actions.yml  semantic-pr-check.yml  sphinx.yml  template-sync.yml
docs/: asam_odsbox.rst  branchstrategy.md  compare_measurement.ipynb  con_i_factory.md  conf.py  index.rst  jaquel.md  jaquel_examples.md  jaquel_examples_notebook.ipynb  modules.rst  odsbox.rst  overview.rst  pylint.md  repository_rules.md  requirements.txt  simple_ods_example.ipynb
docs/_templates/: base.html  layout.html
src/asam_odsbox/: __init__.py  con_i.py  datamatrices_to_pandas.py  jaquel.py  model_cache.py  submatrix_to_pandas.py  transaction.py  unit_catalog.py  unit_utils.py
src/asam_odsbox/proto/: README.md  ods_external_data_pb2.py  ods_external_data_pb2.pyi  ods_external_data_pb2_grpc.py  ods_notification_pb2.py  ods_pb2.py  ods_security_pb2.py  ods_security_pb2.pyi
src/odsbox/: __init__.py  asam_time.py  bulk_reader.py  con_i.py  con_i_factory.py  datamatrices_to_pandas.py  jaquel.py  jaquel_conversion_result.py  model_cache.py  model_suggestions.py  security.py  submatrix_to_pandas.py  transaction.py  unit_catalog.py  unit_utils.py
src/odsbox/proto/: README.md  __init__.py  ods_external_data_pb2.py  ods_external_data_pb2.pyi  ods_external_data_pb2_grpc.py  ods_notification_pb2.py  ods_notification_pb2.pyi  ods_pb2.py  ods_security_pb2.py
tests/: conftest.py  test_asam_time.py  test_bulk_reader.py  test_bulk_reader_integration.py  test_con_i.py  test_con_i_chunked_download.py  test_con_i_factory.py  test_con_i_file_access.py  test_con_i_type_error.py  test_con_i_with_resource_logout.py  test_datamatrices_to_pandas.py  test_datamatrices_to_pandas2.py  test_date_value_mapping.py  test_enum_value_mapping.py  test_exd_api.py  test_is_null_to_nan.py  test_jaquel_convert.py  test_jaquel_mocked.py  test_model_cache.py  test_model_suggestions.py  test_odsbox_init.py  test_proto_init.py  test_security.py  test_submatrix_to_pandas.py  test_unit_catalog.py  test_unit_utils.py
tests/test_data/: application_model.json  examples_from_jaquel_doc.json  mdm_nvh_model.json
tests/test_data/jaquel/: 01 Access Instances 01 Basic access 00 Add some of the related physical dimension.json  01 Access Instances 01 Basic access 00 Add some of the related physical dimension.json.proto  01 Access Instances 01 Basic access 00 Do access only few attributes.json  01 Access Instances 01 Basic access 00 Do access only few attributes.json.proto  01 Access Instances 01 Basic access 00 Lets query for units with base entity name.json  01 Access Instances 01 Basic access 00 Lets query for units with base entity name.json.proto  01 Access Instances 01 Basic access 00 Lets query for units with entity name.json  01 Access Instances 01 Basic access 00 Lets query for units with entity name.json.proto  01 Access Instances 01 Basic access 00 Retrieve all attributes using asterisk.json  01 Access Instances 01 Basic access 00 Retrieve all attributes using asterisk.json.proto  01 Access Instances 01 Basic access 00 Simplify attribute definition.json  01 Access Instances 01 Basic access 00 Simplify attribute definition.json.proto  01 Access Instances 02 Order results by an attribute 00 Order results by  name .json  01 Access Instances 02 Order results by an attribute 00 Order results by  name .json.proto  (+89 more)
tests/test_data/jaquel/bugs/: bug_127_$notnull.json  bug_127_$null.json  (+4 more)
