[project]
name = "odsbox"
version = "1.4.0"
authors = [{ name = "Andreas Krantz", email = "a.krantz@peak-solution.de" }]
description = "Toolbox for accessing ASAM ODS servers using the HTTP API"
license = "MIT"
keywords = [
    "asam",
    "ods",
    "measurement",
    "data access",
    "data science",
    "data analysis",
]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
requires-python = ">=3.10.12"
dependencies = [
    "protobuf>=5.27.0,<8.0.0",
    "requests>=2.30.0,<3.0.0",
    "pandas>=2.2.0,<4.0.0",
]

[project.optional-dependencies]
exd-data = ["grpcio>=1.59.3,<2.0.0"]
oidc = ["pip-system-certs>=5.3,<6.0.0", "requests-oauthlib>=2.0.0,<3.0.0"]

[project.urls]
Homepage = "https://github.com/peak-solution/odsbox/tree/main#readme"
Documentation = "https://peak-solution.github.io/odsbox"
Repository = "https://github.com/peak-solution/odsbox"
Tracker = "https://github.com/peak-solution/odsbox/issues"
Changelog = "https://github.com/peak-solution/odsbox/releases"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pandas-stubs>=2.2.0",
    "pip-audit>=2.9.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.14.0",
    "python-semantic-release>=9.0.0",
    "ruff>=0.15.0",
    "types-requests>=2.30.0",
]
docs = [
    "sphinx>=8.0.0",
    "sphinx-autoapi>=3.0.0",
    "nbsphinx>=0.9.0",
    "myst-parser>=4.0.0",
    "furo>=2024.0.0",
    "sphinx-design>=0.6.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-sitemap>=2.6.0",
    "sphinx-autobuild>=2024.0.0",
    "ipython>=8.0.0",
]

[build-system]
requires = ["uv_build>=0.6,<0.12"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
exclude = ["*_pb2.py", "*_pb2.pyi", "*_pb2_grpc.py", "*_pb2_grpc.pyi", "*.ipynb"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["B905"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = [".*_pb2.*\\.py$"]

[[tool.mypy.overrides]]
module = ["odsbox.proto.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["odsbox.model_cache", "odsbox.jaquel", "odsbox.datamatrices_to_pandas", "odsbox.bulk_reader"]
disable_error_code = ["no-any-return"]

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100

[tool.pytest.ini_options]
addopts = "--cov-report xml:coverage.xml --cov src/odsbox --cov-fail-under 0 -m 'not integration'"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: marks as integration test",
    "notebooks: marks as notebook test",
    "gpu: marks as gpu test",
    "slow: marks tests as slow",
    "unit: fast offline tests",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/odsbox/__init__.py:__version__"]
tag_format = "v{version}"
build_command = "uv build"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
exclude_commit_patterns = ["^Merge", "^chore"]
